# code-robust-state-estimation-singular-noise

./: LICENSE  README.md  example.py  pyproject.toml
experiments/: plot_complexity_curves.py  runtime_benchmark.py
experiments/_old/: plot_complexity_curves.py
experiments/_optimise_parameter/: optimise.py
experiments/_tutorial_optimise_parameter/: optimise.py
experiments/evaluate_robustness/: data_errors.pkl  display_table.py  evaluate.py  solve_ivp.py
experiments/old/: plot_complexity_curves.py
experiments/optimise_parameter/: optimise.py
experiments/verify_reduction_in_complexity/: data_runtimes.pkl  display_table.py  verify.py  verify_complexities.py
src/ckf/: __init__.py  ckf.py  kf.py  test_util.py
tests/: example.py  test_ckf.py
